--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.1",
     "gatsby": "^5.9.1",
+    "gatsby-omni-font-loader": "^2.0.2",
+    "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-image": "^3.10.0",
     "gatsby-plugin-manifest": "^5.10.0",
     "gatsby-plugin-mdx": "^5.10.0",
