--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "gatsby-plugin-manifest": "^5.10.0",
     "gatsby-plugin-mdx": "^5.10.0",
     "gatsby-plugin-sharp": "^5.10.0",
+    "gatsby-remark-embed-video": "^3.2.1",
+    "gatsby-remark-responsive-iframe": "^6.12.0",
     "gatsby-source-filesystem": "^5.10.0",
     "gatsby-transformer-remark": "^6.10.0",
     "gatsby-transformer-sharp": "^5.10.0",
