--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gatsby-plugin-manifest": "^5.10.0",
     "gatsby-plugin-mdx": "^5.10.0",
     "gatsby-plugin-sharp": "^5.10.0",
+    "gatsby-plugin-your-fonts": "^0.0.1",
     "gatsby-remark-embed-video": "^3.2.1",
     "gatsby-remark-responsive-iframe": "^6.12.0",
     "gatsby-source-filesystem": "^5.10.0",
