add retreat and participants

--- a/package.json
+++ b/package.json
@@ -15,27 +15,28 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.0",
-    "@emotion/styled": "^11.11.0",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@mdx-js/react": "^2.3.0",
     "@mui/icons-material": "^5.11.16",
-    "@mui/material": "^5.13.1",
+    "@mui/material": "^5.15.19",
     "gatsby": "^5.9.1",
     "gatsby-omni-font-loader": "^2.0.2",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-image": "^3.10.0",
     "gatsby-plugin-manifest": "^5.10.0",
-    "gatsby-plugin-mdx": "^5.10.0",
+    "gatsby-plugin-mdx": "^5.13.1",
     "gatsby-plugin-react-svg": "^3.3.0",
     "gatsby-plugin-sharp": "^5.10.0",
     "gatsby-plugin-your-fonts": "^0.0.1",
     "gatsby-remark-embed-video": "^3.2.1",
     "gatsby-remark-responsive-iframe": "^6.12.0",
-    "gatsby-source-filesystem": "^5.10.0",
+    "gatsby-source-filesystem": "^5.13.1",
     "gatsby-transformer-remark": "^6.10.0",
     "gatsby-transformer-sharp": "^5.10.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "swiper": "^11.1.4"
   },
   "devDependencies": {
     "file-loader": "^6.2.0",
